# AdDeam

./: .gitignore  .gitmodules  README.md  addeam-bam2prof.py  addeam-cluster.py  allBamsSort.txt  bam2prof.py  cluster.py  cluster_old.py  cluster_pca.py  conda_build.sh  largeBam.txt  log.map  meta.yaml  plot_bam2prof.py  pyproject.toml  requirements.txt
AdDeam/: __init__.py  bam2prof.py
ptest_v1/: ATP2.merged.hs37d5.fa.cons.90perc_sorted_classic_3p.prof  ATP2.merged.hs37d5.fa.cons.90perc_sorted_classic_5p.prof  I1072.1240k_sorted_classic_3p.prof  I1072.1240k_sorted_classic_5p.prof  Ust_Ishim.hg19_1000g.all_sorted_classic_3p.prof  Ust_Ishim.hg19_1000g.all_sorted_classic_5p.prof  cth842_all.merged.hs37d5.fa.cons.90perc_sorted_classic_3p.prof  cth842_all.merged.hs37d5.fa.cons.90perc_sorted_classic_5p.prof  irk034_merged.hs37d5.fa.cons.90perc_sorted_classic_3p.prof  irk034_merged.hs37d5.fa.cons.90perc_sorted_classic_5p.prof  prs012WGC.hs37d5.fa.cons.90perc_sorted_classic_3p.prof  sf12_90perc_libr_160201.merge.hs37d5.fa_sorted_classic_3p.prof  sf12_90perc_libr_160201.merge.hs37d5.fa_sorted_classic_5p.prof
src/: Makefile  bam2prof  bam2prof.cpp  diffprof  log.test  make.out  utilityFunctions.cpp  utilityFunctions.h
submodules/src/: Makefile
test2out/: prs012WGC.hs37d5.fa.cons.90perc_classic_n2887120_5p.prof
testAdDeam/: high1_sorted_md.bam.bai  high2_sorted_md.bam.bai  hpc.txt  low1_sorted_md.bam.bai  low2_sorted_md.bam.bai  mid1_sorted_md.bam.bai  mid2_sorted_md.bam.bai  test.txt
testAdDeam/hpcTest/: high1_sorted_md_classic_n259286_3p.prof  (+7 more)
(+6 files in other folders)
