[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AdDeam"
version = "0.1.0"
description = "A package with a binary"
readme = "README.md"
authors = [{name = "Louis Kraft", email = "loipwr3000@gmail.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "PyPDF2",
    "scipy",
    "cython",
    "opencv-python",
    "bottleneck"
]

[tool.setuptools]
packages = ["AdDeam"]  # Only include the actual Python package

[tool.setuptools.package-data]
"AdDeam" = ["bin/bam2prof"]  # Include binary file, but not as a package

[project.scripts]
addeam_cluster = "AdDeam.cluster:main"
addeam_bam2prof = "AdDeam.bam2prof:main"

[project.optional-dependencies]
linux = ["subprocess32"]  # subprocess32 only for older Linux/macOS
legacy-python = ["concurrent.futures; python_version<'3.2'"]  # Needed only for <3.2



